fix: fixed bug with at a glance tables overflowing their containers on small screen sizes

--- a/styles/tgif.css
+++ b/styles/tgif.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Arial, sans-serif;
   font-size: 1em;
@@ -30,9 +29,10 @@ nav > ul > li {
   top: 0;
   left: 0;
   z-index: 1000;
-  background-color: #f8f9fa;
+  background: #f5f5f5 !important;
   opacity: 95%;
-  padding-top: 15px;
+  padding: 1rem;
+  margin-bottom: 2rem;
 }
 
 .navbar-toggler-icon, .dropdown-toggle::after {
@@ -48,13 +48,38 @@ nav > ul > li {
   padding: 10px;
 }
 
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+}
+
 .tgif-link {
   font-size: 1.5em;
   font-weight: bold;
 }
 
+.tgif-link:hover {
+  text-decoration: underline;
+}
+
+.tgif-p {
+  margin-top: 3px;
+}
+
+.tgif-p-text {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-top: 3px;
+}
+
 .email-link {
   padding-top: 12px;
+}
+
+.email-link:hover {
+  text-decoration: underline;
 }
 
 .navbar-toggler span {
@@ -69,6 +94,10 @@ nav > ul > li {
   color: #000;
 }
 
+.dropdown-text:hover {
+  text-decoration: underline;
+}
+
 h1 {
   font-weight: 600;
 }
@@ -80,11 +109,6 @@ h1 .copyright-symbol {
 h2 {
   font-size: 24px;
   font-weight: 600;
-}
-
-.navbar {
-  padding: 1rem;
-  margin-bottom: 2rem;
 }
 
 .navbar-brand,
@@ -109,7 +133,7 @@ table, th, td {
   border: 1px solid #ddd; 
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-  background: #f8f8f8;
+  background: #f5f5f5;
 }
 
 p {
@@ -173,6 +197,11 @@ p {
   margin-bottom: 35px
 }
 
+.at-a-glance-table {
+  max-width: 100%;
+  overflow-y: auto;
+}
+
 .table,
 .table th,
 .table td {
@@ -186,7 +215,7 @@ p {
 .senate-logo-div {
   display: flex;
   justify-content: flex-end;
-  margin-top: 7%;
+  margin-top: 20px;
 }
 
 .loyalty-div {
@@ -196,17 +225,15 @@ p {
 }
 
 footer {
-  background-color: #f8f9fa;
+  background-color: #f5f5f5;
   padding: 20px 0;
   width: 100%;
   text-align: center;
-  position: relative;
-  bottom: 0;
+  position: absolute;
   left: 0;
   right: 0;
   margin-top: 75px;
-  padding: 0;
-}
+  }
 
 footer p {
   margin: 0;
@@ -221,22 +248,16 @@ footer .right-content {
   text-align: right;
 }
 
+
 @media (max-width: 768px) {
   .navbar-toggler-icon {
       font-size: 1.25rem; 
-  }
-  footer .left-content,
-  footer .right-content {
-      text-align: center;
-  }
-  footer .right-content p {
-      display: block;
   }
   .logo {
     max-width: 75%; 
   }
   .senate-logo {
-    max-width: 75%;
+    max-width: 50%;
   }
   .navbar-brand {
     margin: 0;
@@ -250,6 +271,12 @@ footer .right-content {
 @media (max-width: 576px) {
   body{
     padding-top: 106px;
+    font-size: 0.9em;
+    margin: 1%;
+  }
+  .capitol-pic {
+  border-radius: 0;
+  box-shadow: 0; 
   }
 }
 
